--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -5,7 +5,7 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v1
-      - name: Compile basic LaTeX document
+      - name: Compile LaTeX documents
         uses: ghuysmans/latex-action@master
         with:
           root_file: all
